tests/parser/tests/cases/should_fail/double_hash/case.stderr
error: failed to parse
 --> $DIR/case.hash:1:7
1 |   k := ##naughty_intrinsic();
  |         ^ here
  = note: expected a name here.
